# apriltag_docking

./: CMakeLists.txt  README.md  package.xml
autodock_controller/: CMakeLists.txt  README.md  package.xml
autodock_controller/include/: controller.h
autodock_controller/launch/: auto_dock.launch.py  auto_dock_test.launch  autodock_gazebo.launch.py  autodock_neuronbot.launch.py  controller.launch.py  neuronbot_dock.launch.py
autodock_controller/param/: neuronbot.yaml  tag.yaml
autodock_controller/src/: action_server.cpp  controller.cpp  controller_rand.cpp
autodock_gazebo/launch/: neuronbot2_world.launch  robot.launch
autodock_gazebo/models/Apriltag36_11_00000/: model.sdf
autodock_gazebo/models/dock1/: model.config
autodock_gazebo/models/dock2/: model.config  model.sdf
autodock_gazebo/models/neuronbot2/: model.sdf
autodock_gazebo/models/neuronbot2_with_camera/: model.sdf
autodock_gazebo/models/wall1/: model.config  model.sdf
autodock_gazebo/worlds/: dock.model  tag.model
autodock_msgs/: CMakeLists.txt  package.xml
autodock_msgs/srv/: DockingAction.srv
include/: common.h  controller.h
launch/: auto_dock.launch
neuronbot2_gazebo/models/neuronbot2_w_top_camera/: model.sdf
neuronbot2_gazebo/worlds/: tag.model  tag_world.model
src/: controller.cpp
